tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__MoonLander-AAAAAAAAAAAAAAAAAAADMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 816,
  "prerequisites": [
    817,
    815
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Moon lander is required for a soft landing. You will need an additional frequency module for hearing things on planets, and a second seat for a Moon buggy you may build later.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Moon Lander",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    817,
    815
  ],
  "rewards": [],
  "tasks": []
}
