tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__NASAWorkbench-AAAAAAAAAAAAAAAAAAAKuA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2744,
  "prerequisites": [
    160,
    770,
    1225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The NASA Workbench is used to craft your rockets and other related vehicles. Build it to start your journey into space.\n\n[note]Hint: Check out the nether star recipe which uses null catalyst and salis mundus. Null catalyst can be duplicated by adding magma cream, blaze powder and a tiny pile of nether star dust.[/note]\n\n[note]Also, if you're having trouble getting the wither skulls, you can make a Cleaver or the Skullfire Sword to help with that.[/note]\n\n[warn]For ALL Rocket Quests: If you forget to complete a part quest before crafting the rocket, you can simply hold the completed rocket and those quests will autocomplete, no need to make duplicate parts.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "NASA Workbench",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    770,
    1225
  ],
  "rewards": [],
  "tasks": []
}
