tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__NoBossNeededHowS-gAchVo6VSBO5lRyjs6Rpow==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10274197374371129763,
  "prerequisites": [
    2624,
    2644,
    2618
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To get this schematic you don't need to defeat any boss. You will still need to invest some time.\n\nAfter researching a T8 Rocket Schematic you are able to build the Shuttle Schematic in the Assembly Line.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "No Boss Needed! How Sad!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2624,
    2644,
    2618
  ],
  "rewards": [],
  "tasks": []
}
