tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__OxygenCollector-AAAAAAAAAAAAAAAAAAADPA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 828,
  "prerequisites": [
    824
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The oxygen collector is a block that gathers oxygen from leaves and farm plants to use in an oxygen bubble distributor, oxygen sealer, oxygen compressor, and other oxygen-reliant machines. If you plan to build a Moon base, which needs a continuous oxygen supply, you will need to build one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Oxygen Collector",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    824
  ],
  "rewards": [],
  "tasks": []
}
