tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__OxygenCompressor-AAAAAAAAAAAAAAAAAAADPQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 829,
  "prerequisites": [
    824
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The oxygen compressor is used to fill empty or depleted oxygen tanks. Connect an oxygen pipe to the blue ring input side and a power source to the gray square input side. Place an oxygen tank in the bottom right slot and it will take oxygen from the input and place it into the tank.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Oxygen Compressor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    824
  ],
  "rewards": [],
  "tasks": []
}
